--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,12 @@
 }.layer{
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.5);
+        position: absolute;
+    left: 0;
+    right: 0;
+
+    background-color: rgba(0,0,0,0.7);
+
     display: flex;
     justify-content: center;
     align-items: center;
