--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,13 @@
 .header{
     background-image: url(../image/laptop.webp);
     background-position: center center;
-    background-size:100% 100%
+    background-size:100% 100%;
+        position: relative;
+
 }.layer{
     width: 100%;
     height: 100%;
-        position: absolute;
+    position: absolute;
     left: 0;
     right: 0;
 
